beget/django/dosnt_see_apps/2.txt
------------------------------------------------------------
~ » ssh kipparis@kipparis.beget.tech                     kip@kip-HP-Pavilion-Laptop-15-cc5xx
Welcome to LTD BeGet SSH Server 'maru'
Welcome to Ubuntu 12.04.5 LTS (GNU/Linux 4.9.132-0-beget-acl x86_64)

 * Documentation:  https://help.ubuntu.com/
Last login: Wed Dec 12 14:43:47 2018 from 85.143.228.158
kipparis@maru:~ [0] $ ssh localhost -p222
kipparis@localhost's password: 
Welcome to Ubuntu 12.04 LTS (GNU/Linux 4.9.132-0-beget-acl x86_64)

 * Documentation:  https://help.ubuntu.com/
(docker) kipparis@maru:~ [0] $ cd levelteleg/
(docker) kipparis@maru:~/levelteleg [0] $ touch tmp/restart.txt 
(docker) kipparis@maru:~/levelteleg [0] $ touch tmp/restart.txt 
(docker) kipparis@maru:~/levelteleg [0] $ ls
base  passenger_wsgi.py  public_html  __pycache__  tmp	venv
(docker) kipparis@maru:~/levelteleg [0] $ touch tmp/restart.txt 
(docker) kipparis@maru:~/levelteleg [0] $ touch tmp/restart.txt 
(docker) kipparis@maru:~/levelteleg [0] $ ls
base  passenger_wsgi.py  public_html  __pycache__  tmp	venv
(docker) kipparis@maru:~/levelteleg [0] $ cd ../
(docker) kipparis@maru:~ [0] $ cd levelteleg/
(docker) kipparis@maru:~/levelteleg [0] $ touch tmp/restart.txt 
(docker) kipparis@maru:~/levelteleg [0] $ touch tmp/restart.txt 
(docker) kipparis@maru:~/levelteleg [0] $ cd base/
(docker) kipparis@maru:~/levelteleg/base [0] $ ./manage.py runserver
  File "./manage.py", line 16
    ) from exc
         ^
SyntaxError: invalid syntax
(docker) kipparis@maru:~/levelteleg/base [1] $ python manage.py runserver
  File "manage.py", line 16
    ) from exc
         ^
SyntaxError: invalid syntax
(docker) kipparis@maru:~/levelteleg/base [1] $ 
